# Audio-Mixer

./: README.md  controls.html  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  Control.tsx  controls.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/ui/: slider.tsx  slider2.tsx  toggle-group.tsx
